2009-03-30  Jan Michael Alonzo  <jmalonzo@webkit.org>

        Gtk DRT build fix per changeset
        http://trac.webkit.org/changeset/42082. Not reviewed.

        * DumpRenderTree/gtk/WorkQueueItemGtk.cpp:
        (LoadItem::invoke):
        (ScriptItem::invoke):

2009-03-29  Darin Adler  <darin@apple.com>

        * DumpRenderTree/qt/jsobjects.cpp: Rolled out changes to this file. Maybe this will fix
        Qt building of DumpRenderTree.

2009-03-29  Darin Adler  <darin@apple.com>

        Reviewed by Cameron Zwarich.

        Bug 24922: change WorkQueue-based navigation tests to not depend on synchronous form submission
        https://bugs.webkit.org/show_bug.cgi?id=24922

        Don't rely on delegate methods to guess whether a queued step starts a load or not, because
        script-triggered loads can't be detected that way. Instead have the steps themselves indicate
        whether or not a load was triggered.

        * DumpRenderTree/LayoutTestController.cpp:
        (queueLoadingScriptCallback): Added. Version for scripts that perform loads.
        (queueNonLoadingScriptCallback): Added. Version for scripts that do not perform loads.
        (LayoutTestController::staticFunctions): Replaced queueScript with queueLoadingScript and
        queueNonLoadingScript.
        (LayoutTestController::queueBackNavigation): Moved here since it's platform-independent now.
        (LayoutTestController::queueForwardNavigation): Ditto.
        (LayoutTestController::queueLoadingScript): Replacement for queueScript. Here since it's
        platform-independent.
        (LayoutTestController::queueNonLoadingScript): Ditto.
        (LayoutTestController::queueReload): Moved here since it's platform-independent now.
        * DumpRenderTree/LayoutTestController.h: Ditto.

        * DumpRenderTree/WorkQueue.cpp:
        (WorkQueue::processWork): Added. Shared by the different platform's work queue implementations.
        * DumpRenderTree/WorkQueue.h: Ditto.
